# tuitar

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  rust_ci.yml
firmware/: Cargo.toml  README.md  sdkconfig.defaults
firmware/src/: app.rs  main.rs  transform.rs  ui.rs  utils.rs
hardware/: ASSEMBLY.md  README.md  info  schematics.json
pcb/: PCB_tuitar.json  PCB_tuitar_2.json  info  pcb.json  tuitar.json
ratatui-fretboard/: Cargo.toml  README.md
ratatui-fretboard/src/: error.rs  fretboard.rs  lib.rs  note.rs  scale.rs
ratatui-fretboard/tests/: integration.rs
src/: input.rs  lib.rs  main.rs  samples.txt  transform.rs  transform_esp.rs  ui.rs
tuitar/: Cargo.toml  README.md
tuitar-core/: Cargo.toml  README.md  build.rs
tuitar-core/songs/: minecraft-sweden.gp5  my-own-summer.mid  unscripted-violence.mid
tuitar-core/src/: fps.rs  lib.rs  songs.rs  state.rs  transform.rs  ui.rs
tuitar-embedded/: Cargo.toml
tuitar-embedded/.cargo/: config.toml
tuitar-embedded/src/: app.rs  main.rs  transform.rs
tuitar-tty/: Cargo.toml
tuitar-tty/src/: app.rs  input.rs  main.rs  transform.rs
tuitar/src/: app.rs  input.rs  lib.rs  main.rs  state.rs  transform.rs  ui.rs
