[workspace]
resolver = "2"
members = [
  "tuitar*",
  "firmware",
  "ratatui-fretboard",
]

[workspace.package]
version = "0.1.0"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orhun/tuitar"
homepage = "https://github.com/orhun/tuitar"
documentation = "https://github.com/orhun/tuitar#"
rust-version = "1.77"

[workspace.dependencies]
tuitar-core = { path = "tuitar-core" }
ratatui-fretboard = { path = "ratatui-fretboard", version = "0.2.0" }

ratatui = { version = "0.29.0", default-features = false }
tui-big-text = "=0.7.0"
pitchy = "0.1.1"
log = "0.4"

[profile.release]
opt-level = 3

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
