[package]
name = "tuitar-firmware"
description = "Tuitar firmware for ESP32 devices"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
experimental = ["esp-idf-svc/experimental"]
logging = ["tuitar-core/log", "dep:log"]

[dependencies]
tuitar-core.workspace = true
tui-big-text.workspace = true
pitchy.workspace = true
ratatui-fretboard.workspace = true
log = { workspace = true, optional = true }
esp-idf-svc = { version = "0.51", default-features = false, features = ["std", "binstart" ] }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
mousefood = { path = "/home/orhun/gh/mousefood" }
microfft = "0.6.0"
num-complex = "0.4.6"
st7735-lcd = "0.10.0"
anyhow = "1.0.98"
fastrand = "2.3.0"
ili9341 = "0.6.0"
display-interface = "0.5"
embedded-hal = "1.0.0"
display-interface-spi = "0.5.0"
esp-alloc = "0.8.0"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
