[package]
name = "tuitar-firmware"
description = "Tuitar firmware for ESP32 devices"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
experimental = ["esp-idf-svc/experimental"]
logging = ["tuitar-core/log", "dep:log"]

[dependencies]
tuitar-core.workspace = true
tui-big-text.workspace = true
pitchy.workspace = true
ratatui-fretboard.workspace = true
log = { workspace = true, optional = true }
esp-idf-svc = { version = "0.51", features = ["critical-section"] }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
embedded-hal = "1.0.0"
mousefood = "0.2.1"
microfft = "0.6.0"
num-complex = "0.4.6"
st7735-lcd = "0.10.0"
anyhow = "1.0.98"
fastrand = "2.3.0"
tachyonfx = { version = "0.17.0", features = [], default-features = false }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
