[package]
name = "tuitar-core"
description = "Core library for Tuitar"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
logging = ["log"]

[dependencies]
colorgrad = "0.7.1"
pitchy.workspace = true
ratatui.workspace = true
tui-bar-graph = "0.1.1"
tui-big-text.workspace = true
ratatui-fretboard.workspace = true
log = { workspace = true, optional = true }

[build-dependencies]
guitarpro = "0.1.0"
midly = "0.5.3"
ratatui-fretboard.workspace = true
