[package]
name = "tuitar-tty"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
tty = ["ratatui/crossterm"]

[dependencies]
tuitar.workspace = true
tui-big-text.workspace = true
pitchy.workspace = true
rustfft = "6.3.0"
cpal = "0.15.3"
ratatui = { workspace = true, features = ["crossterm"] }

# [target.x86_64-unknown-linux-gnu.dependencies]
