[package]
name = "tuitar"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
logging = ["log"]

[dependencies]
colorgrad = "0.7.1"
pitchy.workspace = true
ratatui.workspace = true
tui-bar-graph = "0.1.1"
tui-big-text.workspace = true
ratatui-fretboard.workspace = true
log = { workspace = true, optional = true }
